Fix overflow issue for comment content

--- a/assets/css/src/components/comments.css
+++ b/assets/css/src/components/comments.css
@@ -97,3 +97,7 @@
 		margin-top: 1.5em;
 	}
 }
+
+.comment-content {
+	max-width: 100%;
+}
